migrate from subversion to git

--- a/web/index.fr.html
+++ b/web/index.fr.html
@@ -85,7 +85,7 @@
       <ul>
 	<li><a href="http://sourceforge.net/projects/rpmrebuild/">SourceForge main page</a></li>
 	<li><a href="http://lists.sourceforge.net/lists/listinfo/rpmrebuild-project">Mailing list</a></li>
-	<li><a href="http://rpmrebuild.svn.sourceforge.net/viewvc/rpmrebuild/">subversion</a></li>
+	<li><a href="http://sourceforge.net/p/rpmrebuild/git/ci/master/tree/">git</a></li>
       </ul> 
       
       <h2>Les projets liés</h2>
