--- a/web/news.html
+++ b/web/news.html
@@ -18,6 +18,7 @@
       <h1>news</h1>
       
       <ul>
+	<li>2013-11-25 : migrate from subversion to git</li>
 	<li>2013-11-22 : release 2.11, new install option</li>
 	<li>2013-08-11 : release 2.10-2, bugfix for install test</li>
 	<li>2013-08-01 : release 2.10, patch for pretrans/postrans, DISTTAG</li>
