--- a/web/news.fr.html
+++ b/web/news.fr.html
@@ -18,6 +18,7 @@
       <h1>news</h1>
       
       <ul>
+	<li>2013-11-25 : migration de subversion vers git</li>
 	<li>2013-11-22 : release 2.11, option install</li>
 	<li>2013-08-11 : release 2.10-2, correction de bug sur le test d'installation</li>
 	<li>2013-08-01 : release 2.10, patch pour pretrans/postrans, DISTTAG</li>
