--- a/web/rpmrebuild.1.html
+++ b/web/rpmrebuild.1.html
@@ -20,6 +20,8 @@
   
   <body>
     <h1>rpmrebuild</h1>
+
+    <div>
     Section: rpm tools (1)<br />
     Updated: 2.11<br />
     <a href="#index">Index</a> <a name="lbAB" id="lbAB"> </a>
@@ -463,5 +465,6 @@
     <hr />
     This document was created by man2html, using the manual pages.<br />
     Time: 09:55:00 GMT, November 25, 2013
+    </div>
   </body>
 </html>
