--- a/web/rpmrebuild_plugins.1.html
+++ b/web/rpmrebuild_plugins.1.html
@@ -13,6 +13,8 @@
   
   <body>
     <h1>rpmrebuild_plugins</h1>
+
+    <div>
     Section: rpm tools (1)<br />
     Updated: 2.11<br />
     <a href="#index">Index</a> <a name="lbAB" id="lbAB"> </a>
@@ -254,5 +256,6 @@
     <hr />
     This document was created by man2html, using the manual pages.<br />
     Time: 09:32:12 GMT, November 22, 2013
+    </div>
   </body>
 </html>
