--- a/web/uniq.plug.1.html
+++ b/web/uniq.plug.1.html
@@ -19,6 +19,8 @@
   
   <body>
     <h1>uniq.plug</h1>
+
+    <div>
     Section: rpmrebuild plugin (1)<br />
     Updated: 2.11<br />
     <a href="#index">Index</a> <a name="lbAB" id="lbAB"> </a>
@@ -139,5 +141,6 @@
     <hr />
     This document was created by man2html, using the manual pages.<br />
     Time: 09:32:35 GMT, November 22, 2013
+    </div>
   </body>
 </html>
