--- a/web/demo.plug.1.html
+++ b/web/demo.plug.1.html
@@ -19,6 +19,8 @@
   
   <body>
     <h1>demo.plug</h1>
+
+    <div>
     Section: rpmrebuild plugin (1)<br />
     Updated: 2.11<br />
     <a href="#index">Index</a> <a name="lbAB" id="lbAB"> </a>
@@ -144,5 +146,6 @@
     <hr />
     This document was created by man2html, using the manual pages.<br />
     Time: 09:32:23 GMT, November 22, 2013
+    </div>
   </body>
 </html>
