--- a/web/file2pacDep.plug.1.html
+++ b/web/file2pacDep.plug.1.html
@@ -19,6 +19,8 @@
   
   <body>
     <h1>file2pacDep</h1>
+
+    <div>
     Section: rpmrebuild plugin (1rrp)<br />
     Updated: 2.11<br />
     <a href="#index">Index</a> <a name="lbAB" id="lbAB"> </a>
@@ -206,5 +208,6 @@
     <hr />
     This document was created by man2html, using the manual pages.<br />
     Time: 09:32:26 GMT, November 22, 2013
+    </div>
   </body>
 </html>
