--- a/web/unset_tag.plug.1.html
+++ b/web/unset_tag.plug.1.html
@@ -18,6 +18,8 @@
   
   <body>
     <h1>unset_tag.plug</h1>
+
+    <div>
     Section: rpmrebuild plugin (1)<br />
     Updated: 2.11<br />
     <a href="#index">Index</a> <a name="lbAB" id="lbAB"> </a>
@@ -148,5 +150,6 @@
     <hr />
     This document was created by man2html, using the manual pages.<br />
     Time: 09:32:40 GMT, November 22, 2013
+    </div>
   </body>
 </html>
