--- a/web/changelog.fr.html
+++ b/web/changelog.fr.html
@@ -15,6 +15,7 @@
     <h1>CHANGELOG</h1><!-- AS-TOC_BEGIN{ -->
     <h2>Table of Contents</h2>
     <ol>
+      <li><a href="#v2.12-1">2.12-1</a></li>
       <li><a href="#v2.11-3">2.11-3</a></li>
       <li><a href="#v2.11-2">2.11-2</a></li>
       <li><a href="#v2.11">2.11</a></li>
@@ -66,6 +67,12 @@
       <li><a href="#v0.2">0.2</a></li>
       <li><a href="#v0.1">0.1</a></li>
     </ol><!-- AS-TOC_END} -->
+    <hr />
+    Fri Jul 20 2018 Eric Gerbier &lt;<a href="mailto:gerbier@users.sourceforge.net">gerbier@users.sourceforge.net</a>&gt; <a name="v2.12-1" id="v2.12-1">2.12-1</a>
+    <ul>
+      <li>patch sur les require de Bruce Jerrick</li>
+      <li>ajout de la nouvelle syntaxe sur les require avec if ( redhat-rpm-config )</li>
+    </ul>
     <hr />
     Sun Jun 10 2018 Eric Gerbier &lt;<a href="mailto:gerbier@users.sourceforge.net">gerbier@users.sourceforge.net</a>&gt; <a name="v2.11-3" id="v2.11-3">2.11-3</a>
     <ul>
