--- a/web/news.fr.html
+++ b/web/news.fr.html
@@ -14,6 +14,7 @@
   <div>
     <h1>news</h1>
     <ul>
+      <li>2018-07-20 : release 2.12-1, corrections sur la directive requires(Bruce Jerrick)</li>
       <li>2018-06-10 : release 2.11-3, corrections gramaticales anglaises (beroset)</li>
       <li>2017-09-10 : release 2.11-2, dependance sur rpm-build</li>
       <li>2013-11-25 : migration de subversion vers git</li>
