--- a/web/news.html
+++ b/web/news.html
@@ -14,6 +14,7 @@
   <div>
     <h1>news</h1>
     <ul>
+      <li>2018-07-20 : release 2.12-1, patch on requires tag(Bruce Jerrick)</li>
       <li>2018-06-10 : release 2.11-3, Made minor grammatical fixes to English language translations (beroset)</li>
       <li>2017-09-10 : release 2.11-2, dependency on rpm-build package</li>
       <li>2013-11-25 : migrate from subversion to git</li>
