more detailed patch info

--- a/web/changelog.fr.html
+++ b/web/changelog.fr.html
@@ -70,7 +70,7 @@
     <hr />
     Fri Jul 20 2018 Eric Gerbier &lt;<a href="mailto:gerbier@users.sourceforge.net">gerbier@users.sourceforge.net</a>&gt; <a name="v2.12-1" id="v2.12-1">2.12-1</a>
     <ul>
-      <li>patch sur les require de Bruce Jerrick</li>
+      <li>patch sur les require de Bruce Jerrick : Requires(pre,post,preun,postun)</li>
       <li>ajout de la nouvelle syntaxe sur les require avec if ( redhat-rpm-config )</li>
     </ul>
     <hr />
