--- a/web/changelog.html
+++ b/web/changelog.html
@@ -70,7 +70,7 @@
     <hr />
     Fri Jul 20 2018 Eric Gerbier &lt;<a href="mailto:gerbier@users.sourceforge.net">gerbier@users.sourceforge.net</a>&gt; <a name="v2.12-1" id="v2.12-1">2.12-1</a>
     <ul>
-      <li>apply patch on requires from Bruce Jerrick</li>
+      <li>apply patch on requires from Bruce Jerrick : Handle Requires(pre,post,preun,postun)</li>
       <li>add new requires syntax with if ( redhat-rpm-config )</li>
     </ul>
     <hr />
