--- a/web/rpmrebuild.1.html
+++ b/web/rpmrebuild.1.html
@@ -16,7 +16,7 @@
 <body>
   <div>
     <h1>rpmrebuild</h1>Section: rpm tools (1)<br />
-    Updated: 2.13<br />
+    Updated: 2.14<br />
     <a href="#index">Index</a> <a name="lbAB" id="lbAB"></a>
     <h2>NAME</h2>rpmrebuild - a tool to build an rpm package from an installed package
     <p><a name="lbAC" id="lbAC"></a></p>
@@ -79,7 +79,7 @@
       <dt class="c1">-v, --verbose</dt>
       <dd>verbose output</dd>
       <dt class="c1">--debug</dt>
-      <dd>for debugging purposes : do not remove temporary files at end of work</dd>
+      <dd>for debugging purposes : do not remove temporary files at end of work. also force verbose mode</dd>
       <dt class="c1">-V, --version</dt>
       <dd>output version information and exit.</dd>
       <dt class="c1">-w, --warning</dt>
@@ -275,7 +275,7 @@
     </dl>
     <hr />
     This document was created by <a href="/man/man2html">man2html</a>, using the manual pages.<br />
-    Time: 16:02:54 GMT, September 12, 2018
+    Time: 11:46:45 GMT, October 17, 2018
   </div>
 </body>
 </html>
