--- a/web/index.fr.html
+++ b/web/index.fr.html
@@ -39,7 +39,7 @@
     <h2>Téléchargement</h2>
     <ul>
       <li><a href="https://sourceforge.net/projects/rpmrebuild/files/rpmrebuild/">rpmrebuild</a></li>
-      <li><a href="https://sourceforge.net/scm/?type=svn&amp;group_id=57523">version svn</a></li>
+      <li><a href="https://sourceforge.net/p/rpmrebuild/git/ci/master/tree/">acces git</a></li>
     </ul>
     <h2>Modifications</h2>
     <ul>
