--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,7 @@
     <h2>Get it</h2>
     <ul>
       <li><a href="https://sourceforge.net/projects/rpmrebuild/files/rpmrebuild/">rpmrebuild</a></li>
-      <li><a href="https://sourceforge.net/scm/?type=svn&amp;group_id=57523">version svn</a></li>
+      <li><a href="https://sourceforge.net/p/rpmrebuild/git/ci/master/tree/">git access</a></li>
     </ul>
     <h2>Changes</h2>
     <ul>
