--- a/web/index.fr.html
+++ b/web/index.fr.html
@@ -29,7 +29,7 @@
     </ul>
     <h2>A propos</h2>
     <ul>
-      <li><a href="functions.fr.html">specifications</a></li>
+      <li><a href="features.fr.html">fonctionalites</a></li>
       <li><a href="screenshots.fr.html">captures d'ecran</a></li>
       <li><a href="credits.fr.html">remerciements</a></li>
       <li><a href="support.fr.html">support</a></li>
