--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
     </ul>
     <h2>About</h2>
     <ul>
-      <li><a href="functions.html">functionalities</a></li>
+      <li><a href="features.html">features</a></li>
       <li><a href="screenshots.html">screenshots</a></li>
       <li><a href="credits.html">credits</a></li>
       <li><a href="support.html">support</a></li>
