update web changelog

--- a/web/changelog.fr.html
+++ b/web/changelog.fr.html
@@ -80,6 +80,7 @@
       <li>correction de bug dans change-spec-preamble (deplacement de processing_init avant CommandLineParsing),merci Nerijus</li>
       <li>correction de problem sur cpio : ajout de l'option --no-absolute-filenames</li>
       <li>ajout de diagnostics en cas d'erreur</li>
+      <li>correction de bug sur les dependances conditionnelles (avec des espaces)</li>
     </ul>
     <hr />
 
