--- a/web/changelog.html
+++ b/web/changelog.html
@@ -80,6 +80,7 @@
       <li>fix bug on change-spec-preamble (move processing_init before CommandLineParsing) thanks Nerijus</li>
       <li>fix cpio problem : add --no-absolute-filenames option</li>
       <li>better diagnostic on internal error</li>
+      <li>fix bug on conditional requires (with space)</li>
     </ul>
 
     <hr />
