--- a/web/changelog.fr.html
+++ b/web/changelog.fr.html
@@ -14,6 +14,7 @@
     <h1>CHANGELOG</h1><!-- AS-TOC_BEGIN{ -->
     <h2>Table of Contents</h2>
     <ol>
+      <li><a href="#v2.17">2.17</a></li>
       <li><a href="#v2.16-1">2.16-1</a></li>
       <li><a href="#v2.15-1">2.15-1</a></li>
       <li><a href="#v2.14-1">2.14-1</a></li>
@@ -70,6 +71,28 @@
       <li><a href="#v0.2">0.2</a></li>
       <li><a href="#v0.1">0.1</a></li>
     </ol><!-- AS-TOC_END} -->
+    <hr />
+    Tue Jan 10 2023 Eric Gerbier &lt;<a href="mailto:eric.gerbier@tutanota.com">eric.gerbier@tutanota.com</a>&gt; <a name="v2.17" id="v2.17">2.17</a>
+    <ul>
+      <li>correction de l'option -r (xujing)</li>
+      <li>correction de traductions incorrectes (xujing)</li>
+      <li>correction de l'option --comment-missing=n (xujing)</li>
+      <li>correction de l'option --cap-from-fs (xujing)</li>
+      <li>tous les shell en bash</li>
+      <li>simplification de la syntaxe de test x$var: utilise -z</li>
+      <li>changement de email vers tutanota</li>
+      <li>changement du copyright</li>
+      <li>changement de clef gpg</li>
+      <li>correction des avertissements de shellcheck</li>
+      <li>ajout de tests unitaires sur les options et les plugin</li>
+      <li>en mode batch, l'edition est rendue impossible</li>
+      <li>affiche le resultat de l'option spec_only si ok</li>
+      <li>la syntaxe echo+read est resume en une ligne avec read -p</li>
+      <li>ajoutd d'un nouveau plugin exclude_file pour exclude des fichiers</li>
+      <li>les scripts de tests vont dans le repertoire t</li>
+      <li>correction de bug dans le plugin nodoc</li>
+      <li>les variables internes sont renommees avec le prefix RPMREBUILD_</li>
+    </ul>
     <hr />
     Sun Jan 17 2021 Eric Gerbier &lt;<a href="mailto:eric.gerbier@tutanota.com">eric.gerbier@tutanota.com</a>&gt; <a name="v2.16-1" id="v2.16-1">2.16-1</a>
     <ul>
