--- a/web/news.fr.html
+++ b/web/news.fr.html
@@ -13,7 +13,8 @@
   <div>
     <h1>news</h1>
     <ul>
-      <li>2021-01-17 : release 2.16, correction de bugs fix (args, filesystem, multi-install)</li>
+      <li>2023-01-10 : release 2.17, correction de bugs, tests unitaires, nouveau plugin exclude_file</li>
+      <li>2021-01-17 : release 2.16, correction de bugs (args, filesystem, multi-install)</li>
       <li>2020-02-21 : release 2.15-1, correction de bugs, meilleurs diagnostics</li>
       <li>2018-10-19 : release 2.14-1, compatibilite avec vieilles version de rpm</li>
       <li>2018-09-12 : release 2.13-1, RECOMMENDS/SUPPLEMENTS rpm tag</li>
