--- a/web/news.html
+++ b/web/news.html
@@ -13,6 +13,7 @@
   <div>
     <h1>news</h1>
     <ul>
+      <li>2023-01-10 : release 2.17, bugs fix, args and plugin tests, new plugin exclude_file</li>
       <li>2021-01-17 : release 2.16, bugs fix (args, filesystem, multi-install)</li>
       <li>2020-02-21 : release 2.15-1, bugs fix, better diagnostics on errors</li>
       <li>2018-10-19 : release 2.14-1, compatibility with old rpm releases</li>
