add ref to exclude_file plugin

--- a/web/index.fr.html
+++ b/web/index.fr.html
@@ -59,6 +59,7 @@
       <li><a href="compat_digest.plug.1.html">manuel du plugin compat_digest</a></li>
       <li><a href="demofiles.plug.1.html">manuel du plugin demofiles</a></li>
       <li><a href="demo.plug.1.html">manuel du plugin demo</a></li>
+      <li><a href="exclude_file.plug.1.html">manuel du plugin exclude_file</a></li>
       <li><a href="file2pacDep.plug.1.html">manuel du plugin file2pacDep</a></li>
       <li><a href="nodoc.plug.1.html">manuel du plugin nodoc</a></li>
       <li><a href="set_tag.plug.1.html">manuel du plugin set_tag</a></li>
