--- a/web/index.html
+++ b/web/index.html
@@ -59,6 +59,7 @@
       <li><a href="compat_digest.plug.1.html">compat_digest plugin manual</a></li>
       <li><a href="demofiles.plug.1.html">demofiles plugin manual</a></li>
       <li><a href="demo.plug.1.html">demo plugin manual</a></li>
+      <li><a href="exclude_file.plug.1.html">exclude_file plugin manual</a></li>
       <li><a href="file2pacDep.plug.1.html">file2pacDep plugin manual</a></li>
       <li><a href="nodoc.plug.1.html">nodoc plugin manual</a></li>
       <li><a href="set_tag.plug.1.html">set_tag plugin manual</a></li>
